Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14814

sanity test_398b: osc_cache_writeback_range ASSERTION( hp == 0 && discard == 0 ) failed:

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      [16265.830571] LustreError: 901425:0:(osc_cache.c:2983:osc_cache_writeback_range()) ASSERTION( hp == 0 && discard == 0 ) failed: 
      [16265.832824] LustreError: 901425:0:(osc_cache.c:2983:osc_cache_writeback_range()) LBUG
      [16265.834345] Pid: 901425, comm: fio 4.18.0-240.22.1.el8_3.x86_64 #1 SMP Thu Apr 8 19:01:30 UTC 2021
      [16265.836046] Call Trace TBD:
      [16265.836920] [<0>] libcfs_call_trace+0x6f/0x90 [libcfs]
      [16265.837978] [<0>] lbug_with_loc+0x43/0x80 [libcfs]
      [16265.839049] [<0>] osc_cache_writeback_range+0xb0f/0xe80 [osc]
      [16265.840187] [<0>] osc_lock_flush+0x1bf/0x270 [osc]
      [16265.841155] [<0>] osc_lock_lockless_cancel+0x37/0xe0 [osc]
      [16265.842461] [<0>] cl_lock_cancel+0x69/0x140 [obdclass]
      [16265.843569] [<0>] lov_lock_cancel+0x55/0x190 [lov]
      [16265.844555] [<0>] cl_lock_cancel+0x69/0x140 [obdclass]
      [16265.845595] [<0>] cl_lock_release+0x4d/0x120 [obdclass]
      [16265.846648] [<0>] cl_io_unlock+0x10a/0x280 [obdclass]
      [16265.847676] [<0>] cl_io_loop+0xb2/0x1e0 [obdclass]
      [16265.848800] [<0>] ll_file_io_generic+0x447/0xc40 [lustre]
      [16265.849880] [<0>] ll_file_write_iter+0x4ff/0x620 [lustre]
      [16265.851003] [<0>] new_sync_write+0x124/0x170
      [16265.851864] [<0>] vfs_write+0xa5/0x1a0
      [16265.852641] [<0>] ksys_pwrite64+0x61/0xa0
      [16265.853490] [<0>] do_syscall_64+0x5b/0x1a0
      [16265.854343] [<0>] entry_SYSCALL_64_after_hwframe+0x65/0xca
      [16265.855423] Kernel panic - not syncing: LBUG
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_398b - trevis-28vm9 crashed during sanity test_398b

            paf0186 Patrick Farrell
            paf0186 Patrick Farrell
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: